Added logging and error detection in case of shell script failure